--- a/index.html
+++ b/index.html
@@ -72,16 +72,12 @@
       <img class="logo1" src="image/logo-upper-white.png" alt="">
       <img class="logo2" src="image/logo-lower-white.png" alt="">
     </div>
-    <!-- <ul>
-        <img class="spain-flag colorfilter-image" src="image/spain.png" alt="">
-        <img class="japan-flag colorfilter-image" src="image/japan3.png" alt="">
-    </ul> -->
     <div class="profile-area">
       <div class="profile-text">
-        テキスト①：テキストテキストテキストテキスト<span id="emoji1"></span><span id="emoji2"></span><span id="emoji3"></span><br>
+        Bienvenidos a Wi-Fi SHOP
       </div>
       <!-- <img src="image/staff1-1.png" alt="" class="profile profile1"> -->
-      <img src="image/staff2-2.png" alt="" class="profile profile2">
+      <img src="image/staff2-2.png" alt="" class="profile profile1">
     </div>
     <div class="video">
       <iframe width="640" height="360" src="https://www.youtube.com/embed/qm5Z2a4MmfI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -100,8 +96,8 @@
           <img class="area1-image2 area1-image2-1" src="image/rooter.png" alt="">
           <img class="area1-image2 area1-image2-2" src="image/hikari-2gbps1.png" alt="">
           <div>
-            <div class="intro-text1"><span class="text1-title">★ 1 Gbps</span><br><span class="text-line1"><span class="GB1 GB2">テキスト②</span> </span>&nbsp; <span class="price1">4,950￥</span> (毎月税込み)</div>
-            <div class="intro-text1"><span class="text1-title">★ 2 Gbps</span><br><span class="text-line1"><span class="GB1 GB2">テキスト③</span> </span>&nbsp; <span class="price1">5,200￥</span> (毎月税込み)</div>
+            <div class="intro-text1"><span class="text1-title">★ 1 Gbps</span><br><span class="text-line1"><span class="GB1 GB2">Internet residencial ilimitado.<br>(Imp/incluido)</span> </span>&nbsp; <span class="price1">4,950￥</span> (毎月税込み)</div>
+            <div class="intro-text1"><span class="text1-title">★ 2 Gbps</span><br><span class="text-line1"><span class="GB1 GB2">Internet residencial la mas rapida del mercado japones.(Imp/incluido)</span> </span>&nbsp; <span class="price1">5,200￥</span> (毎月税込み)</div>
           </div>
         </ul>
         <ul class="introduce-content">
@@ -119,8 +115,8 @@
             <p>03</p>
           </div>
           <img class="area1-image3" src="image/sim card.png" alt="">
-          <div class="intro-text1 intro-text2"><span class="text1-title">SIM カード</span><br>📌：テキスト④<br><span class="GB2 GB">3</span>GB:<span class="price2">3,980￥</span>/<span class="GB3 GB">6</span>GB:<span class="price2">4,980￥</span><br> <span class="GB4 GB">12</span>GB:<span class="price2">6,980￥</span> (毎月税込み)
-            <br>📌：テキスト⑤<br><span class="GB2 GB">3</span>GB:<span class="price2">2,980￥</span>/<span class="GB5 GB">20</span>GB:<span class="price2">4,400￥</span> (毎月税込み)</div>
+          <div class="intro-text1 intro-text2"><span class="text1-title">SIM カード</span><br>📌：Chip para celulares desbloqueados <br>con llamadas ilimitadas.<br><span class="GB2 GB">3</span>GB:<span class="price2">3,980￥</span>/<span class="GB3 GB">6</span>GB:<span class="price2">4,980￥</span><br> <span class="GB4 GB">12</span>GB:<span class="price2">6,980￥</span> (毎月税込み)
+            <br>📌：Chip para celulares desbloqueados con 60min gratuitos.<br><span class="GB2 GB">3</span>GB:<span class="price2">2,980￥</span>/<span class="GB5 GB">20</span>GB:<span class="price2">4,400￥</span> (毎月税込み)</div>
         </ul>
         <ul class="introduce-content">
           <div class="area1-list">
@@ -137,7 +133,7 @@
           </div>
           <img class="area1-image5" src="image/iphone.png" alt="">
           <img class="area1-image5 area1-image6" src="image/android.png" alt="">
-          <div class="intro-text1 intro-text3"><span class="text1-title">テキスト⑥</span><br> <span class="price1">4,950￥</span>(毎月税込み)</div>
+          <div class="intro-text1 intro-text3"><span class="text1-title text1-1-title">Venta de celulares <br>desbloqueados <br>Iphone, Android.</span><br> <span class="price1">4,950￥</span>(毎月税込み)</div>
         </ul>
       </div>
     </div>
@@ -171,11 +167,11 @@
         <div><img class="customer1" src="image/customer23.jpeg" alt=""></div>
       </div>
       <img class="fukidashi1" src="image/pop1.png" alt="">
-      <p class="customer-text">テキスト⑦</p>
+      <p class="customer-text">Algunos de nuestros clientes<br><span id="emoji1"></span><span id="emoji2"></span><span id="emoji3"></span><span id="emoji4"></span><span id="emoji5"></span><span id="emoji6"></span><span id="emoji7"></span><span id="emoji8"></span></p>
     </div>
 
     <div class="balloon1">
-      <p><span class="text-line">テキスト⑧</span></p>
+      <p><span class="text-line">Contactenos<span id="emoji9"></span></span></p>
     </div>
     <ul class="follow-me">
       <li><a class="what-btn" href="https://wa.me/qr/NYXYDLZYQQ3UH1"><span>&emsp;WhatsApp：0 9 0 - 4 0 7 4 - 5 3 3 7</span></a></li>
@@ -189,19 +185,10 @@
       <h2 class="heading1"><span>①-1&emsp;1 Gbps</span></h2>
      <div class="area1-1-upper">
        <ol class="list_design1">
-         <li>テキスト⑩：テキストテキストテキスト</li>
-         <li>テキスト⑪：テキストテキストテキスト</li>
-         <li>テキスト⑫：テキストテキストテキスト</li>
+         <li>Prestamo de Wi-Fi hasta el dia de su instalacion.</li>
+         <li>Apta para todo japon.</li>
+         <li>Facil y rapido para hacer el pedido.( sin burocracia)</li>
        </ol>
-       <div class="area1-1-wifi1">
-         <!-- <img src="image/cloud wifi.png" alt="" class="area1-1-wifi2">
-         <img src="image/kira3.png" alt="" class="kira1">
-         <img src="image/kira4.png" alt="" class="kira2">
-         <img src="image/kira6.png" alt="" class="kira3">
-         <img src="image/kira4.png" alt="" class="kira4">
-         <div class="circle"></div> -->
-         <!-- <div class="wifi-text">テキスト⑮</div> -->
-       </div>
        <div class="area1-1-gbps1">
          <img src="image/modem.png" alt="" class="area1-1-gbps2">
          <img src="image/rooter.png" alt="" class="area1-1-gbps2 area1-1-gbps3">
@@ -209,16 +196,16 @@
          <img src="image/kira4.png" alt="" class="kira2">
          <img src="image/kira4.png" alt="" class="kira3">
          <div class="circle"></div>
-         <div class="gbps-text">テキスト⑯</div>
+         <div class="gbps-text">Internet 1Gbps</div>
        </div>
        <img src="image/mokumoku.png" alt="" class="mokumoku">
-       <div class="point">テキスト⑨</div>
+       <div class="point"><span id="emoji1"></span><span id="emoji2"></span></div>
      </div> 
       <div class="area1-1-textarea">
-        <span class="area1-1-textarea-title">テキスト⑬</span>
-        <p>テキスト⑭：テキストテキストテキストテキストテキストテキストテキスト
-          <span id="emoji4"></span> テキストテキストテキストテキストテキストテキストテキスト⚡ 
-          テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+        <span class="area1-1-textarea-title">Descripcion del producto.</span>
+        <p>Esta internet es de 1gbps de velocidad fibra optica ilimitada que da para conectar vários dispositivos a la vez. 
+          En este producto la proveedora le presta un wi-fi momentáneo hasta el dia de su instalación, es transferible y lo mejor de todo que la proveedora le ofrece soporte en su propio idioma.
+        </p>
       </div>
       <div class="video">
         <iframe width="640" height="360" src="https://www.youtube.com/embed/IDCJAGDnjek" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -231,9 +218,9 @@
       <h2 class="heading1"><span>①-2&emsp;2 Gbps</span></h2>
      <div class="area1-2-upper">
        <ol class="list_design1">
-        <li>テキスト⑱：テキストテキストテキスト</li>
-        <li>テキスト⑲：テキストテキストテキスト</li>
-        <li>テキスト⑳：テキストテキストテキスト</li>
+        <li>Catalogada como la mas rapida del mercado japones.</li>
+        <li>recomendada para.. juegos on-line,live, negocios casas.</li>
+        <li>Modem con router wifi incorporado.</li>
        </ol>
        <div class="area1-2-gbps1">
          <img src="image/hikari-2gbps1.png" alt="" class="area1-2-gbps2">
@@ -242,16 +229,15 @@
          <img src="image/kira6.png" alt="" class="kira3">
          <img src="image/kira4.png" alt="" class="kira4">
          <div class="circle"></div>
-         <div class="gbps-text">テキスト㉓</div>
+         <div class="gbps-text"> internet de 2Gbps.</div>
        </div>
        <img src="image/mokumoku.png" alt="" class="mokumoku">
-       <div class="point">テキスト⑰</div>
+       <div class="point"><span id="emoji1"></span><span id="emoji2"></div>
      </div> 
       <div class="area1-2-textarea">
-        <span class="area1-2-textarea-title">テキスト㉑</span>
-        <p>テキスト㉒：テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-          <span id="emoji4"></span> テキストテキストテキストテキストテキストテキストテキストテキストテキスト⚡ 
-          テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+        <span class="area1-2-textarea-title">Descripcion del producto.</span>
+        <p>Este es un producto de 2gbps ilimitada catalogada como la mas rapida en japon. 
+          Esta hecha para las personas que buscan rapidez, como jugadores de juegos on-line, personas que hacen live, youtuber tiktokers, para personas que tengan casas de primer y segundo piso y personas que tengan negocios y desean compartir Wi-Fi con sus clientes.</p>
       </div>
       <div class="video">
         <iframe width="640" height="360" src="https://www.youtube.com/embed/NVEynJcD_Jo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -264,9 +250,9 @@
       <h2 class="heading1"><span>② ポケット Wi-fi 200GB/100GB</span></h2>
      <div class="area2-upper">
        <ol class="list_design1">
-         <li>テキスト㉕：テキストテキストテキストテキスト</li>
-         <li>テキスト㉖：テキストテキストテキストテキスト</li>
-         <li>テキスト㉗：テキストテキストテキストテキスト</li>
+         <li>100Gb/200Gb (satelital)</li>
+         <li>Comodo practico y facil de usar.</li>
+         <li>Para ud que usa internet fuera de casa.</li>
        </ol>
        <div class="area2-wifi1">
          <img src="image/cloud wifi.png" alt="" class="area2-wifi2">
@@ -276,19 +262,16 @@
         <img src="image/kira6.png" alt="" class="kira3">
         <img src="image/kira4.png" alt="" class="kira4">
          <div class="circle"></div>
-         <div class="wifi-text">テキスト㉚</div>
+         <div class="wifi-text">Pocket Wi-Fi</div>
        </div>
        <img src="image/mokumoku.png" alt="" class="mokumoku">
-       <div class="point">テキスト㉔</div>
-       <!-- <img src="image/wifi-customer.jpeg" alt="" class="wifi-customer">
-       <img class="fukidashi1" src="image/pop1.png" alt="">
-       <p class="customer-text">ถูกใจใช้ดีที่สุดค่ะ!!</p> -->
+       <div class="point"><span id="emoji1"></span><span id="emoji2"></span></div>
      </div> 
       <div class="area2-textarea">
-        <span class="area2-textarea-title">テキスト㉘</span>
-        <p>テキスト㉙：テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-          <span id="emoji4"></span> テキストテキストテキストテキストテキストテキストテキストテキストテキスト⚡ 
-          テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+        <span class="area2-textarea-title">Descripcion del producto</span>
+        <p>Este producto es Wi-Fi mobil, es tan practico que se puede cargar en el bolsillo.
+          Recomendado para las personas que mantienen mas fuera de casa. 
+          Dependiendo del producto tiene la opción satelital. </p>
       </div>
       <div class="video">
         <iframe width="640" height="360" src="https://www.youtube.com/embed/xZ0N4-JXDKg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -302,28 +285,24 @@
       <div class="area3-content">
         <!-- <h3>3GB/6GB/12GB</h3> -->
         <ol class="list_design1">
-          <li>テキスト㉜：テキストテキストテキスト</li>
-          <li>テキスト㉝：テキストテキストテキスト</li>
-          <li>テキスト㉞：テキストテキストテキスト</li>
+          <li>Llamadas ilimitadas</li>
+          <li>Black list ok<span id="emoji1"></span>&emsp;&emsp;&emsp;&emsp;&emsp;</li>
+          <li>Entrega inmediata</li>
         </ol>
         <div class="area3-textarea1">
-          <span class="area3-textarea-title">テキスト㉟</span>
-          <p>テキスト㊱：テキストテキストテキストテキストテキスト<br>
-            📌テキストテキストテキストテキスト<br>テキストテキストテキストテキスト<br>
-            テキスト<br><span id="emoji5"></span>テキストテキストテキスト
-            テキストテキストテキスト
-            テキストテキストテキストテキストテキストテキスト
-            テキストテキストテキストテキストテキスト </p>
+          <span class="area3-textarea-title">Descripcion del producto.</span>
+          <p>Este producto es recomendado para las personas que necesiten un numero de telefono, contiene llamadas ilimitadas y los gigas de su preferencia. 
+            El chip es entrega inmediata,sin contratos, no interesa el tipo de visado o personas que se encuentan en  el black list. </p>
         </div>
       </div>
       <img src="image/mokumoku.png" alt="" class="mokumoku1">
-      <div class="recommend1">テキスト㉛</div>
+      <div class="recommend1"><span id="emoji1"></span><span id="emoji2"></div>
       <img src="image/sim card.png" alt="" class="area3-image1">
       <img src="image/kira3.png" alt="" class="kira1">
       <img src="image/kira4.png" alt="" class="kira2">
       <img src="image/kira6.png" alt="" class="kira3">
       <div class="circle1"></div>
-      <div class="sim-text1">テキスト㊲</div>
+      <div class="sim-text1">Chip para telefonos desbloqueados.</div>
       <div class="video1">
         <iframe width="440" height="280" src="https://www.youtube.com/embed/UIWGrkVk7-8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
@@ -336,16 +315,14 @@
       <h2 class="heading3"><span>④ 50GB / 100GB データ </span></h2>
       <div class="area4-content">
         <ol class="list_design1">
-          <li>テキスト㊸：テキストテキストテキスト</li>
-          <li>テキスト㊹：テキストテキストテキスト</li>
-          <li>テキスト㊺：テキストテキストテキスト</li>
+          <li>Chip solamente datos.</li>
+          <li>Para uso en dispositivos desbloqueados.</li>
+          <li>Black list ok, entrega inmediata. </li>
         </ol>
         <div class="area4-textarea">
-          <span class="area4-textarea-title">テキスト㊻</span>
-          <p>テキスト㊼：テキストテキストテキストテキスト<br>テキストテキストテキスト
-            <span id="emoji6"></span><br>
-            📌テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト 
-            テキストテキストテキストテキストテキストテキスト<span id="emoji6"></span>
+          <span class="area4-textarea-title">Descripcion del producto.</span>
+          <p>Este producto es recomendado para las personas q no desean tener linea de telefono.
+            Al hacer su pedido la entrega es inmediata, no interesa el tipo de visado ni el black list. 
           </p>
         </div>
       </div>
@@ -353,12 +330,12 @@
         <iframe width="440" height="280" src="https://www.youtube.com/embed/u72hVFNoSlg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <img src="image/mokumoku.png" alt="" class="mokumoku3">
-      <div class="recommend3">テキスト㊷</div>
+      <div class="recommend3"><span id="emoji1"></span><span id="emoji2"></div>
       <img src="image/sim card.png" alt="" class="area3-image1">
       <img src="image/kira3.png" alt="" class="kira1">
       <img src="image/kira4.png" alt="" class="kira2">
       <div class="circle3"></div>
-      <div class="sim-text3">テキスト㊽</div>
+      <div class="sim-text3">Sim card datos.</div>
     </div>
   </section>
 
@@ -367,33 +344,29 @@
       <h2 class="heading3"><span>⑤ 中古携帯電話販売</span></h2>
       <div class="area5-content">
         <div class="area5-textarea">
-          <span class="area5-textarea-title">テキスト㊾</span>
+          <span class="area5-textarea-title">Descripcion del producto.</span>
           <p>
-            📌テキスト㊿：テキストテキストテキストテキストテキストテキストテキスト<br>
-            テキストテキストテキストテキストテキストテキストテキストテキスト<br>
-            テキストテキストテキストテキストテキストテキストテキストテキストテキスト<br>
-            <span id="emoji7"></span>テキストテキストテキストテキストテキストテキストテキストテキスト<br>
-            テキストテキストテキストテキストテキストテキストテキストテキスト<span id="emoji8"></span>
+            En Wi-Fi SHOP tenemos ventas de telefonos celulares desbloqueados.
+            Iphone, Android.<br>
+            En nuestra tienda encontrara diversos modelos que ud pueda escoger. 
+            En caso ud tenga un modelo en especial es solo comunicarse con nosotros y se lo traemos a sus manos. 
           </p>
         </div>
       </div>
-      <!-- <img src="image/mokumoku.png" alt="" class="mokumoku3">
-      <div class="recommend3">テキストテキスト</div> -->
       <img src="image/iphone.png" alt="" class="area5-image1">
       <img src="image/android.png" alt="" class="area5-image1 area5-image2">
       <img src="image/kira3.png" alt="" class="kira1">
       <img src="image/kira4.png" alt="" class="kira2">
       <img src="image/kira4.png" alt="" class="kira3">
       <div class="circle3"></div>
-      <div class="sim-text3">テキスト51</div>
+      <div class="sim-text3">Iphone, Android desbloqueados.</div>
     </div>
     <div class="area5-lower">
       <section class="map">
         <div class="map-content">
-          <h1>テキスト52：テキスト</h1>
-          <h2>テキスト53：テキストテキストテキストテキスト<br>
-            テキストテキストテキストテキストテキスト<br>
-            テキストテキストテキストテキストテキストテキストテキスト</h2>
+          <h1>Wi-Fi SHOP <span id="emoji1"></span> SAGAWA</h1>
+          <h2>Wi-Fi SHOP es una empresa que le ofrece a sus clientes comodidad economia y sobre todo garantia en todos sus productos.
+            Es por ello que trabajamos con SAGAWA para hacerle llegar su producto con la seguridad y responsabilidad que todos uds se merecen. </h2>
         </div>
       </section>
       <img class="sagawa1" src="image/sagawa-track.png" alt="">
@@ -466,6 +439,14 @@
           <!-- <div class="footer-text">Wi-Fi SHOP-Thai</div> -->
         </div>
       </div>
+      <footer class="footer">
+        <div class="footer-box">
+          <div class="copyright">
+            <p>&copy;2021 Wi-Fi SHOP WONET, All Rights Reserved.</p>
+          </div>
+        </div>
+      </footer>
+
     </div>
   </section>
  </main>
