--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
         <!-- <h3>3GB/6GB/12GB</h3> -->
         <ol class="list_design1">
           <li>Llamadas ilimitadas</li>
-          <li>Black list ok<span id="emoji1"></span>&emsp;&emsp;&emsp;&emsp;&emsp;</li>
+          <li>Black list ok<span id="emoji1"></span>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</li>
           <li>Entrega inmediata</li>
         </ol>
         <div class="area3-textarea1">
