--- a/index.html
+++ b/index.html
@@ -286,8 +286,8 @@
         <!-- <h3>3GB/6GB/12GB</h3> -->
         <ol class="list_design1">
           <li>Llamadas ilimitadas</li>
-          <li>Black list ok<span id="emoji1"></span>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</li>
-          <li>Entrega inmediata</li>
+          <li>Black list ok<span id="emoji1"></span></li>
+          <li>Entrega inmediata&emsp;&emsp;&emsp;&emsp;</li>
         </ol>
         <div class="area3-textarea1">
           <span class="area3-textarea-title">Descripcion del producto.</span>
