--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="ja">
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-KVEKLV12ZH"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-WVWN5SES91"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-KVEKLV12ZH');
+    gtag('config', 'G-WVWN5SES91');
   </script>
 
   <meta charset="UTF-8">
@@ -49,6 +49,9 @@
     var chatbox = document.getElementById('fb-customer-chat');
     chatbox.setAttribute("page_id", "543738492678640");
     chatbox.setAttribute("attribution", "biz_inbox");
+  </script>
+  <!-- Your SDK code -->
+  <script>
     window.fbAsyncInit = function() {
       FB.init({
         xfbml            : true,
@@ -107,7 +110,7 @@
           </div>
           <img class="area1-image10" src="image/cloud wifi.png" alt="">
           <img class="area1-image10 area1-image11" src="image/wifi2.png" alt="">
-          <div class="intro-text1"><span class="text1-title">ポケット Wi-fi</span><br><span class="text-line2"><span class="GB1 GB2">200</span> GB</span>/<span class="text-line2"><span class="GB1 GB2">100</span> GB</span><br> <span class="price1">6,000￥</span> (毎月税込み)</div>
+          <div class="intro-text1"><span class="text1-title">ポケット Wi-fi</span><br><span class="text-line2"><span class="GB1 GB2">200</span> GB(Satelital)</span>/<span class="text-line2"><span class="GB1 GB2">100</span> GB</span><br> <span class="price1">6,000￥</span> (毎月税込み)</div>
         </ul>
         <ul class="introduce-content">
           <div class="area1-list">
@@ -138,9 +141,9 @@
       </div>
     </div>
 
-    <div class="video">
+    <!-- <div class="video">
       <iframe width="640" height="360" src="https://www.youtube.com/embed/r1nfhuAN3G4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
+    </div> -->
 
     <div class="customer-wrapper">
       <div class="customer slick-srider">
@@ -239,9 +242,9 @@
         <p>Este es un producto de 2gbps ilimitada catalogada como la mas rapida en japon. 
           Esta hecha para las personas que buscan rapidez, como jugadores de juegos on-line, personas que hacen live, youtuber tiktokers, para personas que tengan casas de primer y segundo piso y personas que tengan negocios y desean compartir Wi-Fi con sus clientes.</p>
       </div>
-      <div class="video">
+      <!-- <div class="video">
         <iframe width="640" height="360" src="https://www.youtube.com/embed/NVEynJcD_Jo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </div>
+      </div> -->
     </div>
   </section>
 
@@ -361,6 +364,17 @@
       <div class="circle3"></div>
       <div class="sim-text3">Iphone, Android desbloqueados.</div>
     </div>
+
+    <!-- メリット -->
+    <div class="video videoo-merit">
+      <iframe class="video-merit" width="640" height="360" src="https://www.youtube.com/embed/NVEynJcD_Jo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    <div></div>
+    <!-- 店舗、お客様 -->
+    <div class="video">
+      <iframe width="640" height="360" src="https://www.youtube.com/embed/r1nfhuAN3G4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
     <div class="area5-lower">
       <section class="map">
         <div class="map-content">
